# yedikare-remote

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  yedikare.code-workspace
DEBIAN/: postinst  prerm
flutter/: ndk_arm.sh  ndk_arm64.sh  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/hoptodesk/app/: AudioRecordHandle.kt  FloatingWindowService.kt  InputService.kt  MainActivity.kt  MainService.kt  RdClipboardManager.kt  common.kt
flutter/ios/: Podfile
flutter/ios/BroadcastUploadExtension/: BroadcastUploadExtension.entitlements  Info.plist  SampleHandler.swift
flutter/ios/Runner/: AppDelegate.swift  BroadcastManager.swift  BroadcastPickerViewFactory.swift  Info.plist  Runner-Bridging-Header.h  Runner.entitlements  ffi.h
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/ios/Shared/: SampleBufferIPC.swift
flutter/lib/: common.dart  consts.dart  main.dart
flutter/lib/common/widgets/: chat_page.dart  connection_page_title.dart  dialog.dart  peer_card.dart  peer_tab_page.dart  peers_view.dart  remote_input.dart  setting_widgets.dart  toolbar.dart
flutter/lib/desktop/pages/: connection_page.dart  desktop_home_page.dart  desktop_setting_page.dart  install_page.dart  remote_tab_page.dart  server_page.dart  view_camera_page.dart
flutter/lib/desktop/widgets/: remote_toolbar.dart
flutter/lib/mobile/pages/: connection_page.dart  home_page.dart  remote_page.dart  server_page.dart  settings_page.dart  view_camera_page.dart
flutter/lib/models/: file_model.dart  input_model.dart  model.dart  native_model.dart  server_model.dart
flutter/macos/Runner/: Info.plist
flutter/macos/Runner.xcodeproj/: project.pbxproj
flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter/macos/Runner/Configs/: AppInfo.xcconfig
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
libs/hbb_common/: Cargo.toml
libs/hbb_common/src/: api.rs  config.rs  lib.rs
libs/hbb_common/src/platform/: linux.rs  mod.rs
libs/magnum-opus/: build.rs
libs/scrap/: Cargo.toml  build.rs
libs/scrap/src/wayland/: pipewire.rs
libs/stun/: Cargo.toml
libs/stun/src/: error_code.rs
libs/turn/: Cargo.toml
libs/turn/src/client/: mod.rs  relay_conn.rs
res/: YedikareRemote.icns
src/: client.rs  clipboard.rs  common.rs  core_main.rs  dashboard.rs  flutter.rs  flutter_ffi.rs  ipc.rs  keyboard.rs  lan.rs  lang.rs  lib.rs  main.rs  mcp_server.rs  ocr_winrt.rs  rendezvous_mediator.rs  rendezvous_ws.rs  server.rs  tray.rs  ui.rs  ui_cm_interface.rs  ui_interface.rs  ui_session_interface.rs
src/client/: io_loop.rs
src/hbbs_http/: account.rs
src/lang/: ar.rs  be.rs  bg.rs  ca.rs  cn.rs  cs.rs  da.rs  de.rs  el.rs  en.rs  eo.rs  es.rs  et.rs  eu.rs  fa.rs  fi.rs  fr.rs  he.rs  hr.rs  hu.rs  id.rs  it.rs  ja.rs  ko.rs  kz.rs  lt.rs  lv.rs  nb.rs  nl.rs  pl.rs  pt_PT.rs  ptbr.rs  ro.rs  ru.rs  sk.rs  sl.rs  sq.rs  sr.rs  sv.rs  template.rs  (+5 more)
src/platform/: delegate.rs  linux.rs  macos.mm  macos.rs  mod.rs  pinch_zoom.rs  windows.rs
src/privacy_mode/: win_inline_privacy.rs  win_topmost_window.rs
src/server/: clipboard_service.rs  connection.rs  display_service.rs  input_service.rs  terminal_service.rs  video_service.rs
src/ui/: ab.tis  chatbox.html  cm.css  cm.rs  cm.tis  common.css  common.tis  file_transfer.css  file_transfer.tis  header.css  header.tis  index.css  index.tis  install.tis  msgbox.tis  port_forward.tis  remote.css  remote.html  remote.rs  remote.tis  terminal.css  terminal.tis
